--- a/First period/HTMLeCSS/Atividade 1/index.html
+++ b/First period/HTMLeCSS/Atividade 1/index.html
@@ -1,46 +1,80 @@
 <!DOCTYPE html>
 <link rel="stylesheet" type="text/css" href="style.css" media="screen">
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculo</title>
 </head>
+
 <body>
-<div class="geral">
-<div class="basico">
-    <ul>
-        <li ><h1>Emanuel de Cristo Santos</h1></li>
-        <li><h4>Brasileiro, Solteiro, 18 anos</h4></li>
-        <li><h4>Bairro: Vila Carli - Guarapuava/PR</h4></li>
-        <li><h4>Telefone: (42) 98803-7573</h4></li>
-        <li><h4>E-mail: emanuelll3000@gmail.com</h4></li>
-    </ul>
-</div>
+    <div class="geral">
+        <div class="basico">
+            <ul>
+                <li>
+                    <h1>Emanuel de Cristo Santos</h1>
+                </li>
+                <li>
+                    <h4>Brasileiro, Solteiro, 18 anos</h4>
+                </li>
+                <li>
+                    <h4>Bairro: Vila Carli - Guarapuava/PR</h4>
+                </li>
+                <li>
+                    <h4>Telefone: (42) 98803-7573</h4>
+                </li>
+                <li>
+                    <h4>E-mail: emanuelll3000@gmail.com</h4>
+                </li>
+            </ul>
+        </div>
 
-<div class="formac">
-    <ul>
-        <li><h2>Formação Academica</h2></li>
-        <li><h4>Ensino médio Completo</h4></li>
-        <li><h4>Cursando 3º Periodo de Eng. Soft. no Centro Universitario Campo Real</h4></li>
-    </ul>
-</div>
+        <div class="formac">
+            <ul>
+                <li>
+                    <h2>Formação Academica</h2>
+                </li>
+                <li>
+                    <h4>Ensino médio Completo</h4>
+                </li>
+                <li>
+                    <h4>Cursando 3º Periodo de Eng. Soft. no Centro Universitario Campo Real</h4>
+                </li>
+            </ul>
+        </div>
 
-<div class="experiencias">
-    <ul>
-        <li><h2>Experiencias</h2></li>
-        <li><h4>Estágiario na Campo Real: Técnico de TI, Suporte Técnico e Atendimento ao Cliente. </h4></li>
-    </ul>
-</div>
+        <div class="experiencias">
+            <ul>
+                <li>
+                    <h2> Experiencias</h2>
+                </li>
+                <li>
+                    <h4>Estágiario na Campo Real: Técnico de TI, Suporte Técnico e Atendimento ao Cliente. </h4>
+                </li>
+            </ul>
+        </div>
 
-<div class="habilidades">
-    <ul>
-        <li><h2>Habilidades</h2></li>
-    </ul>
-</div>
-</div>
+        <div class="habilidades">
+            <ul>
+                <li>
+                    <h2>Habilidades</h2>
+                </li>
+                <li>
+                    <h4>Habilidades em Software e Hardware.</h4>
+                </li>
+                <li>
+                    <h4>Limpeza de Componentes e Formatação de Computadores</h4>
+                </li>
+                <li>
+                    <h4>Sou altamente flexível e adaptável</h4>
+                </li>
+            </ul>
+        </div>
+    </div>
     <figure>
         <img src="foto_perfil.png" alt="foto_perfil">
     </figure>
 </body>
+
 </html>
