--- a/First period/HTMLeCSS/Atividade 2/index.html
+++ b/First period/HTMLeCSS/Atividade 2/index.html
@@ -1,29 +1,64 @@
 <!DOCTYPE html>
 <link rel="stylesheet" type="text/css" href="style.css" media="screen">
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Museu Nacional</title>
 </head>
+
 <body>
     <div class="area-header">
         <div class="area-logo">
-            <h1><span class="branco">MUSEU </span><span class="laranja">NACIONAL</span></h1>
+            <img src="logo.png">
         </div>
+
         <div class="area-menu">
             <a href="">HOME</a>
             <a href="">EXPOSIÇÃO</a>
             <a href="">PESQUISA</a>
             <a href="">ACERVO</a>
             <a href="">VÍDEOS</a>
-            <a  href="">FOTOS</a>
+            <a href="">FOTOS</a>
             <a href="">CONTATO</a>
         </div>
     </div>
     <div class="area-main">
-        <img src="museu.png">
-    </div> 
-    
+        <div class="museu">
+            <img src="museu.png">
+        </div>
+        <div class="depoimento">
+            <img src="depoimento.png">
+        </div>
+        <div class="visita">
+            <h5> FAÇA SUA VISITA</h5>
+            <div class="data_qtd">
+                <label for="data">data:</label>
+                <input type="date" id="data" name="data">
+                <label for="numPessoas">Qtd pessoas:</label>
+                <input type="number" id="numPessoas" name="numPessoas" min="1">
+            </div>
+            <br>
+            <button type="button" oneclick="verificar()">Verificar Disponibilidade</button>
+
+        </div>
+        <div class="galeria">
+            <h5> GALERIA DE FOTOS</h5>
+            <div class="fundo">
+                <img src="fundo-foto.png">
+                <img src="fundo-foto.png">
+                <img src="fundo-foto.png">
+                <img src="fundo-foto.png">
+            </div>
+            <div class="fotos">
+                <img src="imagem1.jpg">
+                <img src="imagem2.jpg">
+                <img src="imagem3.jpg">
+                <img src="imagem4.jpg">
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
