--- a/First period/HTMLeCSS/Atividade 2/index.html
+++ b/First period/HTMLeCSS/Atividade 2/index.html
@@ -58,6 +58,20 @@
                 <img src="imagem4.jpg">
             </div>
         </div>
+        <div class="map">
+            <h5>MAPA: ENCONTRE O MUSEU</h5>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14700.808102142226!2d-43.22880341324464!3d-22.90591812514693!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997e58a085b7af%3A0x4d11e9a933d38ce3!2sMuseu%20Nacional%20-%20UFRJ!5e0!3m2!1spt-PT!2sbr!4v1710192256371!5m2!1spt-PT!2sbr"
+                width="320" height="170" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="video">
+            <h5>VÍDEO: CONHEÇA O MUSEU</h5>
+            <iframe width="320" height="170" src="https://www.youtube.com/embed/RGUYb-hivrc?si=wgdcIUzxzTO7a60k"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+        </div>
     </div>
 </body>
 
