--- a/First-period/HTMLeCSS/aula4-Spotify/assets/index.html
+++ b/First-period/HTMLeCSS/aula4-Spotify/assets/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="/First-period/HTMLeCSS/aula4-Spotify/assets/css/estilo.css">
+
     <title>Spotify</title>
+    link
 </head>
 <body>
     
