--- a/First-period/HTMLeCSS/aula4-Spotify/assets/index.html
+++ b/First-period/HTMLeCSS/aula4-Spotify/assets/index.html
@@ -60,7 +60,33 @@
 
 
 
-    </header>
+    </header><!--fim do cabeçalho-->
+
+    <section id="home" class="d-flex">
+        <div class="container align-self-center">
+
+            <div class="row">
+                <div class="col-md12 capa">
+
+                    <div id="carousel-spotify" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                    <h1>Músicas para todos</h1>
+                                    <a href="" class="btn btn-lg btn-custom btn-roxo">
+                                        Aproveite o Spotify Free
+                                    </a>
+                                    <a href="" class="btn btn-lg btn-custom btn-branco">
+                                        Obter Spotify Premium
+                                    </a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+    </section>
 
 </body>
 
