--- a/First-period/HTMLeCSS/College_Project/Content/engSoftware.html
+++ b/First-period/HTMLeCSS/College_Project/Content/engSoftware.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="engSoftware.css" media="screen">
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ForNoob - Eng. Software</title>
+    <link rel="stylesheet" href="engSoftware.css">
 </head>
-
 <body>
-    <!--Navbar para solicitar/avaliar e pesquisar conteudos-->
     <div class="top-container">
         <a href="#"><span>&plus;</span> Solicitar Conteúdo</a>
         <hr>
@@ -19,33 +16,41 @@
             <input type="text" placeholder="Pesquisar em Conteúdo">
         </form>
     </div>
+
     <div class="content-container">
-        <h1><span>Bem vindo!</span> você selecionou:</h1>
+        <h1><span>Bem-vindo!</span> Você selecionou:</h1>
         <img src="../Content/images/logo-engsoftware.png">
         <p><span>Selecione</span> o <span>conteúdo</span> desejado no <span>menu</span> à <span>esquerda</span>!</p>
     </div>
 
-
-    <!--Navbar para escolher conteúdos-->
     <div class="leftnavbar-container">
         <a id="home-href" href="../Home/index.html">🏠 Home</a>
-        <a class="subject" href="#"><span>></span> Matéria 1</a>
-        <div class="content">
-            <a href="/College_Project/Content/materia-1/conteudo-1.html">Conteudo 1</a>
-            <a href="/College_Project/Content/materia-1/conteudo-2.html">Conteudo 2</a>
+        <div class="subject-folder">
+            <input type="checkbox" id="subject-toggle-1" class="toggle">
+            <label for="subject-toggle-1" class="subject-label">Matéria 1</label>
+            <div class="content">
+                <a href="/College_Project/Content/materia-1/conteudo-1.html">Conteúdo 1</a>
+                <a href="/College_Project/Content/materia-1/conteudo-2.html">Conteúdo 2</a>
+            </div>
         </div>
-        <a class="subject" href="#"><span>></span> Matéria 2</a>
-        <div class="content">
-            <a href="/College_Project/Content/materia-2/conteudo-1.html">Conteudo 1</a>
-            <a href="/College_Project/Content/materia-2/conteudo-2.html">Conteudo 2</a>
+        <div class="subject-folder">
+            <input type="checkbox" id="subject-toggle-2" class="toggle">
+            <label for="subject-toggle-2" class="subject-label">Matéria 2</label>
+            <div class="content">
+                <a href="/College_Project/Content/materia-2/conteudo-1.html">Conteúdo 1</a>
+                <a href="/College_Project/Content/materia-2/conteudo-2.html">Conteúdo 2</a>
+            </div>
         </div>
-        <a class="subject" href="#"><span>></span> Matéria 3</a>
-        <div class="content">
-            <a href="/College_Project/Content/materia-3/conteudo-1.html">Conteudo 1</a>
-            <a href="/College_Project/Content/materia-3/conteudo-2.html">Conteudo 2</a>
+        <div class="subject-folder">
+            <input type="checkbox" id="subject-toggle-3" class="toggle">
+            <label for="subject-toggle-3" class="subject-label">Matéria 3</label>
+            <div class="content">
+                <a href="/College_Project/Content/materia-3/conteudo-1.html">Conteúdo 1</a>
+                <a href="/College_Project/Content/materia-3/conteudo-2.html">Conteúdo 2</a>
+            </div>
         </div>
     </div>
-</body>
-<script src="engSoftware.js"></script>
 
+    <script src="engSoftware.js"></script>
+</body>
 </html>
