--- a/First-period/HTMLeCSS/College_Project/teste-navbar-responsiva/index.html
+++ b/First-period/HTMLeCSS/College_Project/teste-navbar-responsiva/index.html
@@ -13,6 +13,7 @@
     <header class="header">
         <nav class="nav">
             <a href="/" class="logo">😎</a>
+            <button class="seta">></button>
             <ul class="nav-list">
                 <li><a href="#">Sobre</a></li>
                 <li><a href="#">Projetos</a></li>
