--- a/First-period/HTMLeCSS/aula1.html
+++ b/First-period/HTMLeCSS/aula1.html
@@ -41,7 +41,7 @@
         </section>
     </main>
     <footer>
-        <p>Copyright © 2024 Emanuel Cristo</p>
+        <p>Copyright © 2024 Emanuel de Cristo Santos</p>
     </footer>
 </body>
 </html>
