--- a/First-period/HTMLeCSS/aula4-Spotify/assets/index.html
+++ b/First-period/HTMLeCSS/aula4-Spotify/assets/index.html
@@ -66,28 +66,66 @@
         <div class="container align-self-center">
 
             <div class="row">
-                <div class="col-md12 capa">
-
+                <div class="col-md-12 capa">
                     <div id="carousel-spotify" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                    <h1>Músicas para todos</h1>
-                                    <a href="" class="btn btn-lg btn-custom btn-roxo">
-                                        Aproveite o Spotify Free
-                                    </a>
-                                    <a href="" class="btn btn-lg btn-custom btn-branco">
-                                        Obter Spotify Premium
-                                    </a>
+                                <h1>Músicas para todos</h1>
+                                <a href="" class="btn btn-lg btn-custom btn-roxo">
+                                    Aproveite o Spotify Free
+                                </a>
+                                <a href="" class="btn btn-lg btn-custom btn-branco">
+                                    Obter Spotify Premium
+                                </a>
+                            </div>
+                            <div class="carousel-item">
+                                <h1>As melhores rádios</h1>
+                                <a href="" class="btn btn-lg btn-custom btn-branco">
+                                    <i class="fas fa-music"></i>Ouça agora
+                                </a>
                             </div>
                         </div>
+                        <!--controles-->
+                        <a href="#carousel-spotify" class="carousel-control-prev" data-slide="prev">
+                            <i class="fas fa-angle-left fa-3x"></i>
+                        </a>
+                        <a href="#carousel-spotify" class="carousel-control-next" data-slide="next">
+                            <i class="fas fa-angle-right fa-3x"></i>
+                        </a>
                     </div>
 
                 </div>
             </div>
 
         </div>
-    </section>
+    </section><!--fechamento home-->
 
+    <section id="servicos" class="caixa">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="row albuns">
+
+                        <div class="col-md-6">
+                            <img src="/First-period/HTMLeCSS/aula4-Spotify/assets/imagens/img1.jpg" class="img-fluid">
+                        </div>
+                        <div class="col-md-6">
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- JavaScript (Opcional) -->
+    <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 
 </html>
