--- a/First-period/HTMLeCSS/aula4-Spotify/assets/index.html
+++ b/First-period/HTMLeCSS/aula4-Spotify/assets/index.html
@@ -111,7 +111,7 @@
                             <img src="/First-period/HTMLeCSS/aula4-Spotify/assets/imagens/img1.jpg" class="img-fluid">
                         </div>
                         <div class="col-md-6">
-
+                            <img src="/First-period/HTMLeCSS/aula4-Spotify/assets/imagens/img2.jpg" class="img-fluid">
                         </div>
                     </div>
                 </div>
