--- a/First-period/HTMLeCSS/College_Project/Content/disciplina-1/conteudo-2.html
+++ b/First-period/HTMLeCSS/College_Project/Content/disciplina-1/conteudo-2.html
@@ -43,20 +43,20 @@
     <!--Navbar para escolher conteúdos-->
     <div class="leftnavbar-container">
         <a id="home-href" href="../Home/index.html">🏠 Home</a>
-        <a class="subject" href="#"><span>></span> Matéria 1</a>
+        <a class="subject" href="#"><span>></span> Disciplina 1</a>
         <div class="content">
-            <a href="/College_Project/Content/materia-1/conteudo-1.html">Conteudo 1</a>
-            <a href="/College_Project/Content/materia-1/conteudo-2.html">Conteudo 2</a>
+            <a href="/First-period/HTMLeCSS/College_Project/Content/disciplina-1/conteudo-1.html">Conteudo 1</a>
+            <a href="/First-period/HTMLeCSS/College_Project/Content/disciplina-1/conteudo-2.html">Conteudo 2</a>
         </div>
-        <a class="subject" href="#"><span>></span> Matéria 2</a>
+        <a class="subject" href="#"><span>></span> Disciplina 2</a>
         <div class="content">
-            <a href="/College_Project/Content/materia-2/conteudo-1.html">Conteudo 1</a>
-            <a href="/College_Project/Content/materia-2/conteudo-2.html">Conteudo 2</a>
+            <a href="/First-period/HTMLeCSS/College_Project/Content/disciplina-2/conteudo-1.html">Conteudo 1</a>
+            <a href="/First-period/HTMLeCSS/College_Project/Content/disciplina-2/conteudo-2.html">Conteudo 2</a>
         </div>
-        <a class="subject" href="#"><span>></span> Matéria 3</a>
+        <a class="subject" href="#"><span>></span> Disciplina 3</a>
         <div class="content">
-            <a href="/College_Project/Content/materia-3/conteudo-1.html">Conteudo 1</a>
-            <a href="/College_Project/Content/materia-3/conteudo-2.html">Conteudo 2</a>
+            <a href="/First-period/HTMLeCSS/College_Project/Content/disciplina-3/conteudo-1.html">Conteudo 1</a>
+            <a href="/First-period/HTMLeCSS/College_Project/Content/disciplina-3/conteudo-2.html">Conteudo 2</a>
         </div>
     </div>
 </body>
