--- a/First-period/HTMLeCSS/College_Project/Content/disciplina-3/conteudo-1.html
+++ b/First-period/HTMLeCSS/College_Project/Content/disciplina-3/conteudo-1.html
@@ -42,7 +42,7 @@
     </div>
     <!--Navbar para escolher conteúdos-->
     <div class="leftnavbar-container">
-        <a id="home-href" href="../Home/index.html">🏠 Home</a>
+        <a id="home-href" href="/First-period/HTMLeCSS/College_Project/Home/index.html">🏠 Home</a>
         <a class="subject" href="#"><span>></span> Disciplina 1</a>
         <div class="content">
             <a href="/First-period/HTMLeCSS/College_Project/Content/disciplina-1/conteudo-1.html">Conteudo 1</a>
