--- a/First-period/HTMLeCSS/College_Project/Content/engSoftware.html
+++ b/First-period/HTMLeCSS/College_Project/Content/engSoftware.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ForNoob - Eng. Software</title>
     <link rel="stylesheet" href="engSoftware.css">
 </head>
+
 <body>
     <div class="top-container">
         <a href="#"><span>&plus;</span> Solicitar Conteúdo</a>
@@ -26,7 +28,7 @@
     <div class="leftnavbar-container">
         <a id="home-href" href="../Home/index.html">🏠 Home</a>
         <div class="subject-folder">
-            <input type="checkbox" id="subject-toggle-1" class="toggle">
+            <button class="toggle" id="subject-toggle-1"></button>
             <label for="subject-toggle-1" class="subject-label">Matéria 1</label>
             <div class="content">
                 <a href="/First-period/HTMLeCSS/College_Project/Content/disciplina-1/conteudo-1.html">Conteúdo 1</a>
@@ -34,16 +36,16 @@
             </div>
         </div>
         <div class="subject-folder">
-            <input type="checkbox" id="subject-toggle-2" class="toggle">
-            <label for="subject-toggle-2" class="subject-label">Matéria 2</label>
+            <button class="toggle" id="subject-toggle-1"></button>
+            <label for="subject-toggle-1" class="subject-label">Matéria 2</label>
             <div class="content">
                 <a href="/First-period/HTMLeCSS/College_Project/Content/disciplina-2/conteudo-1.html">Conteúdo 1</a>
                 <a href="//First-period/HTMLeCSS/College_Project/Content/disciplina-2/conteudo-2.html">Conteúdo 2</a>
             </div>
         </div>
         <div class="subject-folder">
-            <input type="checkbox" id="subject-toggle-3" class="toggle">
-            <label for="subject-toggle-3" class="subject-label">Matéria 3</label>
+            <button class="toggle" id="subject-toggle-1"></button>
+            <label for="subject-toggle-1" class="subject-label">Matéria 3</label>
             <div class="content">
                 <a href="/First-period/HTMLeCSS/College_Project/Content/disciplina-3/conteudo-1.html">Conteúdo 1</a>
                 <a href="/First-period/HTMLeCSS/College_Project/Content/disciplina-3/conteudo-2.html">Conteúdo 2</a>
@@ -53,4 +55,5 @@
 
     <script src="engSoftware.js"></script>
 </body>
+
 </html>
