--- a/First-period/HTMLeCSS/College_Project/Content/disciplina-1/conteudo-1.html
+++ b/First-period/HTMLeCSS/College_Project/Content/disciplina-1/conteudo-1.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="leftnavbar-container">
-        <a id="home-href" href="../Home/index.html">🏠 Home</a>
+        <a id="home-href" href="/First-period/HTMLeCSS/College_Project/Home/index.html">🏠 Home</a>
         <div class="subject-folder">
             <button class="toggle" id="subject-toggle-1"></button>
             <label for="subject-toggle-1" class="subject-label">Matéria 1</label>
