--- a/First-period/HTMLeCSS/College_Project/Content/disciplina-1/conteudo-1.html
+++ b/First-period/HTMLeCSS/College_Project/Content/disciplina-1/conteudo-1.html
@@ -20,9 +20,17 @@
     </div>
 
     <div class="content-container">
-        <h1><span>Bem-vindo!</span> Você selecionou:</h1>
-        <img src="../Content/images/logo-engsoftware.png">
-        <p><span>Selecione</span> o <span>conteúdo</span> desejado no <span>menu</span> à <span>esquerda</span>!</p>
+        <h1>Conteúdo 1</h1>
+        <br>
+        <br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio unde voluptate laborum suscipit vitae accusamus et, totam eius perferendis nemo, expedita velit, vero aut placeat modi optio. Tempore, debitis tempora.
+        </p>
+        <br>
+        <img src="/First-period/HTMLeCSS/College_Project/Content/images/conteudo.png">
+        <br>
+        <br>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus expedita cumque tempora officiis voluptatibus architecto repellendus ullam asperiores eligendi officia eos fuga dolorum consequatur incidunt autem, dignissimos accusantium totam quia.
+        </p>
     </div>
 
     <div class="leftnavbar-container">
