--- a/First-period/HTMLeCSS/College_Project/Content/engSoftware.html
+++ b/First-period/HTMLeCSS/College_Project/Content/engSoftware.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ForNoob - Eng. Software</title>
+    <title>4Noob - Eng. Software</title>
     <link rel="stylesheet" href="engSoftware.css">
 </head>
 
