--- a/First-period/HTMLeCSS/College_Project/Home/index.html
+++ b/First-period/HTMLeCSS/College_Project/Home/index.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ForNoob - Home</title>
+    <title>4Noob - Home</title>
 </head>
 <body>
     <div class="container">
