--- a/First-period/HTMLeCSS/College_Project/Content/disciplina-1/conteudo-1.html
+++ b/First-period/HTMLeCSS/College_Project/Content/disciplina-1/conteudo-1.html
@@ -10,9 +10,9 @@
 
 <body>
     <div class="top-container">
-        <a href="#"><span>&plus;</span> Solicitar Conteúdo</a>
+        <a href="/First-period/HTMLeCSS/College_Project/Content/solicitar-conteudo/index.html"><span>&plus;</span> Solicitar Conteúdo</a>
         <hr>
-        <a href="#"><span>&check;</span> Avaliar Conteúdo</a>
+        <a href="/First-period/HTMLeCSS/College_Project/Content/avaliar-conteudo/index.html"><span>&check;</span> Avaliar Conteúdo</a>
         <hr>
         <form id="search">
             <input type="text" placeholder="Pesquisar em Conteúdo">
