--- a/First-period/HTMLeCSS/College_Project/Content/solicitar-conteudo/index.html
+++ b/First-period/HTMLeCSS/College_Project/Content/solicitar-conteudo/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>4Noob - Eng. Soft.- Disciplina 1 - Conteúdo 2</title>
-    <link rel="stylesheet" href="conteudo-2.css">
+    <title>4Noob - Eng. Software</title>
+    <link rel="stylesheet" href="engSoftware.css">
 </head>
 
 <body>
@@ -20,23 +20,13 @@
     </div>
 
     <div class="content-container">
-        <h1>Conteúdo 2</h1>
-        <br>
-        <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio unde voluptate laborum suscipit vitae accusamus et, totam eius perferendis nemo, expedita velit, vero aut placeat modi optio. Tempore, debitis tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque modi ratione pariatur hic esse sunt! Vitae, quae id. In voluptates beatae officiis exercitationem. Odit quasi, et voluptatum consequatur itaque cupiditate.
-        </p>
-        <br>
-        <img src="/First-period/HTMLeCSS/College_Project/Content/images/conteudo.png">
-        <br>
-        <br>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus expedita cumque tempora officiis voluptatibus architecto repellendus ullam asperiores eligendi officia eos fuga dolorum consequatur incidunt autem, dignissimos accusantium totam quia. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem sequi ex deleniti, debitis rerum, consequatur, praesentium explicabo expedita assumenda qui rem quia dicta totam cumque nesciunt numquam a. Iure, animi.
-        </p>
-        <br>
-        <img src="/First-period/HTMLeCSS/College_Project/Content/images/bancodados.png">
+        <h1><span>Bem-vindo!</span> Você selecionou:</h1>
+        <img src="../Content/images/logo-engsoftware.png">
+        <p><span>Selecione</span> o <span>conteúdo</span> desejado no <span>menu</span> à <span>esquerda</span>!</p>
     </div>
 
     <div class="leftnavbar-container">
-        <a id="home-href" href="/First-period/HTMLeCSS/College_Project/Home/index.html">🏠 Home</a>
+        <a id="home-href" href="../Home/index.html">🏠 Home</a>
         <div class="subject-folder">
             <button class="toggle" id="subject-toggle-1"></button>
             <label for="subject-toggle-1" class="subject-label">Matéria 1</label>
