--- a/First-period/HTMLeCSS/College_Project/Content/avaliar-conteudo/index.html
+++ b/First-period/HTMLeCSS/College_Project/Content/avaliar-conteudo/index.html
@@ -10,9 +10,11 @@
 
 <body>
     <div class="top-container">
-        <a href="/First-period/HTMLeCSS/College_Project/Content/solicitar-conteudo/index.html"><span>&plus;</span> Solicitar Conteúdo</a>
+        <a href="/First-period/HTMLeCSS/College_Project/Content/solicitar-conteudo/index.html"><span>&plus;</span>
+            Solicitar Conteúdo</a>
         <hr>
-        <a href="/First-period/HTMLeCSS/College_Project/Content/avaliar-conteudo/index.html"><span>&check;</span> Avaliar Conteúdo</a>
+        <a href="/First-period/HTMLeCSS/College_Project/Content/avaliar-conteudo/index.html"><span>&check;</span>
+            Avaliar Conteúdo</a>
         <hr>
         <form id="search">
             <input type="text" placeholder="Pesquisar em Conteúdo">
@@ -23,13 +25,20 @@
         <h1>Avaliar Conteúdo</h1>
         <br>
         <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio unde voluptate laborum suscipit vitae accusamus et, totam eius perferendis nemo, expedita velit, vero aut placeat modi optio. Tempore, debitis tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque modi ratione pariatur hic esse sunt! Vitae, quae id. In voluptates beatae officiis exercitationem. Odit quasi, et voluptatum consequatur itaque cupiditate.
-        </p>
+        <div class="curso-container">
+            <label>Curso</label>
+            <select id="curso"></select>
+            <option></option>
+        </div>
         <br>
         <img src="/First-period/HTMLeCSS/College_Project/Content/images/conteudo.png">
         <br>
         <br>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus expedita cumque tempora officiis voluptatibus architecto repellendus ullam asperiores eligendi officia eos fuga dolorum consequatur incidunt autem, dignissimos accusantium totam quia. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem sequi ex deleniti, debitis rerum, consequatur, praesentium explicabo expedita assumenda qui rem quia dicta totam cumque nesciunt numquam a. Iure, animi.
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus expedita cumque tempora officiis
+            voluptatibus architecto repellendus ullam asperiores eligendi officia eos fuga dolorum consequatur
+            incidunt autem, dignissimos accusantium totam quia. Lorem ipsum dolor, sit amet consectetur adipisicing
+            elit. Autem sequi ex deleniti, debitis rerum, consequatur, praesentium explicabo expedita assumenda qui
+            rem quia dicta totam cumque nesciunt numquam a. Iure, animi.
         </p>
         <br>
         <img src="/First-period/HTMLeCSS/College_Project/Content/images/bancodados.png">
