--- a/First-period/HTMLeCSS/College_Project/Content/solicitar-conteudo/index.html
+++ b/First-period/HTMLeCSS/College_Project/Content/solicitar-conteudo/index.html
@@ -10,9 +10,11 @@
 
 <body>
     <div class="top-container">
-        <a href="/First-period/HTMLeCSS/College_Project/Content/solicitar-conteudo/index.html"><span>&plus;</span> Solicitar Conteúdo</a>
+        <a href="/First-period/HTMLeCSS/College_Project/Content/solicitar-conteudo/index.html"><span>&plus;</span>
+            Solicitar Conteúdo</a>
         <hr>
-        <a href="/First-period/HTMLeCSS/College_Project/Content/avaliar-conteudo/index.html"><span>&check;</span> Avaliar Conteúdo</a>
+        <a href="/First-period/HTMLeCSS/College_Project/Content/avaliar-conteudo/index.html"><span>&check;</span>
+            Avaliar Conteúdo</a>
         <hr>
         <form id="search">
             <input type="text" placeholder="Pesquisar em Conteúdo">
@@ -23,16 +25,55 @@
         <h1>Solicitar Conteúdo</h1>
         <br>
         <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio unde voluptate laborum suscipit vitae accusamus et, totam eius perferendis nemo, expedita velit, vero aut placeat modi optio. Tempore, debitis tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque modi ratione pariatur hic esse sunt! Vitae, quae id. In voluptates beatae officiis exercitationem. Odit quasi, et voluptatum consequatur itaque cupiditate.
+        <p>Queremos tornar sua experiência de aprendizado ainda mais personalizada e completa! Se você não encontrou o
+            que estava procurando em nosso site ou se tem sugestões de novos conteúdos que gostaria de ver aqui, fique à
+            vontade para nos enviar sua solicitação.
         </p>
         <br>
-        <img src="/First-period/HTMLeCSS/College_Project/Content/images/conteudo.png">
-        <br>
-        <br>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus expedita cumque tempora officiis voluptatibus architecto repellendus ullam asperiores eligendi officia eos fuga dolorum consequatur incidunt autem, dignissimos accusantium totam quia. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem sequi ex deleniti, debitis rerum, consequatur, praesentium explicabo expedita assumenda qui rem quia dicta totam cumque nesciunt numquam a. Iure, animi.
+        <p>Basta preencher o formulário abaixo com os detalhes do conteúdo que você gostaria de ver. Faremos o possível
+            para atender sua solicitação e fornecer o conteúdo desejado em breve.
         </p>
-        <br>
-        <img src="/First-period/HTMLeCSS/College_Project/Content/images/bancodados.png">
+        <form>
+            <div class="campo">
+                <label><strong>Nome</strong></label>
+                <input type="text" nome="nome" id="nome">
+            </div>
+
+            <div class="campo">
+                <label><strong>Email</strong></label>
+                <input type="email" nome="email" id="email">
+            </div>
+
+            <div class="campo">
+                <label><strong>Curso</strong></label>
+                <select id="curso">
+                    <option selected disabled value="">Selecione</option>
+                    <option>Engenharia de Software</option>
+                    <option>Engenharia Civil</option>
+                    <option>Engenharia Mecanica</option>
+                    <option>Engenharia Eletrica</option>
+                </select>
+            </div>
+
+            <div class="campo">
+                <label><strong>Título do Conteúdo</strong></label>
+                <input type="text" nome="titulo" id="titulo">
+            </div>
+
+            <div class="campo">
+                <label><strong>Descrição do Conteúdo</strong></label>
+                <textarea row="6" style="width: 26em" nome="descricao" id="descricao"></textarea>
+            </div>
+
+            <a href="/First-period/HTMLeCSS/College_Project/Content/engSoftware.html">
+                <button class="botao" type="button">Concluído</button>
+            </a>
+
+            <br>
+            <p>Agradecemos sua contribuição para melhorar nosso site e estamos ansiosos para ajudá-lo em seu processo de
+                aprendizado!</p>
+        </form>
+
     </div>
 
     <div class="leftnavbar-container">
