--- a/First-period/HTMLeCSS/Atividade-1/index.html
+++ b/First-period/HTMLeCSS/Atividade-1/index.html
@@ -33,7 +33,7 @@
         <div class="formac">
             <ul>
                 <li>
-                    <h2>Formação Academica</h2>
+                    <h2>Formação Acadêmica</h2>
                 </li>
                 <li>
                     <h4>Ensino médio Completo</h4>
