--- a/First-period/HTMLeCSS/Atividade-3/pag3.html
+++ b/First-period/HTMLeCSS/Atividade-3/pag3.html
@@ -13,9 +13,9 @@
         <div class="container">
             <img class="logo" src="/First-period/HTMLeCSS/Atividade-3/images/logo.png">
             <div class="navbar-container">
-                <a class="navbar-item" href="#">home</a>
+                <a class="navbar-item" href="pag1.html">home</a>
                 <img src="/First-period/HTMLeCSS/Atividade-3/images/divisor.png">
-                <a class="navbar-item selecao" href="#">Brasil</a>
+                <a class="navbar-item " href="pag2.html">Brasil</a>
                 <img src="/First-period/HTMLeCSS/Atividade-3/images/divisor.png">
                 <a class="navbar-item" href="#">Internacional</a>
                 <img src="/First-period/HTMLeCSS/Atividade-3/images/divisor.png">
@@ -25,7 +25,7 @@
                 <img src="/First-period/HTMLeCSS/Atividade-3/images/divisor.png">
                 <a class="navbar-item" href="#">Ciência</a>
                 <img src="/First-period/HTMLeCSS/Atividade-3/images/divisor.png">
-                <a class="navbar-item" href="#">Fotos</a>
+                <a class="navbar-item selecao" href="pag3.html">Fotos</a>
             </div>
             <img class="mapa" src="/First-period/HTMLeCSS/Atividade-3/images/detalhe-topo.png">
         </div>
